tests/reference/asr-structs_05-fa98307.stderr
warning: The module 'numpy' located in $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py cannot be loaded
 --> tests/../integration_tests/structs_05.py:2:1
  |
2 | from numpy import empty
  | ^^^^^^^^^^^^^^^^^^^^^^^ imported here

semantic error: Decorator: vertorize is not supported
   --> $DIR/src/bin/../runtime/lpython_intrinsic_numpy.py:421:2
    |
421 | @vertorize
    |  ^^^^^^^^^ 
